--- a/branches/develop/index.html
+++ b/branches/develop/index.html
@@ -91,43 +91,37 @@
 
 <section>
   <h2>Method</h2>
-  <p>Our proposed architecture consists of three main components:</p>
-  <ul>
-    <li><strong>Visual Encoder:</strong> A ResNet-50 backbone for extracting visual features.</li>
-    <li><strong>Textual Encoder:</strong> A BERT-base model for processing textual inputs.</li>
-    <li><strong>Cross-Modal Fusion Module:</strong> A multi-head attention mechanism that dynamically weights features from different modalities based on context.</li>
-  </ul>
-  <p>The fusion module allows for dynamic weighting of features from different modalities based on the input context. We employ a joint training strategy that optimizes both modality-specific and cross-modal objectives simultaneously.</p>
+  <p>Our proposed architecture consists of three main components: (1) a visual encoder based on ResNet-50, (2) a textual encoder using BERT-base, and (3) a cross-modal fusion module implemented using multi-head attention. The fusion module allows for dynamic weighting of features from different modalities based on the input context. We employ a joint training strategy that optimizes both modality-specific and cross-modal objectives simultaneously.</p>
 </section>
 
 <section>
   <h2>Experimental Setup</h2>
-  <p>We evaluate our approach on three benchmark datasets: VQA 2.0, MSCOCO Caption, and Flickr30K. Our method achieves 72.4% accuracy on VQA 2.0, surpassing the previous best result by 3.2%. On MSCOCO Caption, we obtain a BLEU-4 score of 38.6, representing a 2.1% improvement over the baseline. Training was performed using the Adam optimizer with a learning rate of 1e-4 and a batch size of 32.</p>
+  <p>We evaluate our approach on three benchmark datasets: VQA 2.0, MSCOCO Caption, and Flickr30K. Our method achieves 72.4% accuracy on VQA 2.0, surpassing the previous best result by 3.2%. On MSCOCO Caption, we obtain a BLEU-4 score of 38.6, which represents a 2.1% improvement over the baseline. Training was performed using Adam optimizer with a learning rate of 1e-4 and batch size of 32.</p>
 </section>
 
 <section>
   <h2>Results</h2>
-  <p>Figure 1 shows the convergence behavior of our model during training, where the proposed method converges faster and achieves lower final loss compared to baseline approaches. Figure 2 illustrates the attention weights learned by the cross-modal fusion module, demonstrating that the model learns to focus on relevant visual regions when processing textual queries. Performance comparisons across different datasets are presented in Figure 3, showing consistent improvements over existing methods.</p>
+  <p>Figure&nbsp;1 shows the convergence behavior of our model during training. The proposed method converges faster and achieves lower final loss compared to baseline approaches. Figure&nbsp;2 illustrates the attention weights learned by the cross-modal fusion module, demonstrating that the model learns to focus on relevant visual regions when processing textual queries. Performance comparisons across different datasets are presented in Figure&nbsp;3, showing consistent improvements over existing methods.</p>
 
-  <figure>
-    <img src="images/training_convergence.png" style="width:70%">
-    <figcaption>Figure 1: Convergence behavior of our model during training.</figcaption>
+  <figure style="width:70%">
+    <img src="images/training_convergence.png" alt="Training convergence curve">
+    <figcaption>Figure 1: Convergence behavior of the proposed model during training.</figcaption>
   </figure>
 
-  <figure>
-    <img src="images/attention_visualization.png" style="width:70%">
+  <figure style="width:70%">
+    <img src="images/attention_visualization.png" alt="Attention visualization">
     <figcaption>Figure 2: Attention weights learned by the cross-modal fusion module.</figcaption>
   </figure>
 
-  <figure>
-    <img src="images/performance_comparison.png" style="width:70%">
-    <figcaption>Figure 3: Performance comparison across different datasets.</figcaption>
+  <figure style="width:70%">
+    <img src="images/performance_comparison.png" alt="Performance comparison across datasets">
+    <figcaption>Figure 3: Performance comparison between the proposed method and baseline approaches across benchmark datasets.</figcaption>
   </figure>
 </section>
 
 <section>
   <h2>Conclusion</h2>
-  <p>We have presented a novel multi-modal learning architecture that effectively combines visual and textual information processing. Our experimental results demonstrate significant improvements over existing approaches across multiple benchmark datasets. The proposed cross-modal fusion mechanism shows promise for various applications including visual question answering, image captioning, and multimodal retrieval. Future work will explore extensions to additional modalities such as audio and video data.</p>
+  <p>We have presented a novel multi-modal learning architecture that effectively combines visual and textual information processing. Our experimental results demonstrate significant improvements over existing approaches across multiple benchmark datasets. The proposed cross-modal fusion mechanism shows promise for various applications including visual question answering, image captioning, and multimodal retrieval. Future work will explore extension to additional modalities such as audio and video data.</p>
 </section>
 </body>
 </html>
