--- a/branches/develop/index.html
+++ b/branches/develop/index.html
@@ -76,7 +76,7 @@
 
 <section>
   <h2>Introduction</h2>
-  <p>Multi-modal learning has become increasingly important in modern machine learning applications. Traditional approaches often struggle with integrating information from different modalities effectively&nbsp;<a href="https://arxiv.org/abs/2301.12345" target="_blank" title="Deep Learning for Natural Language Processing: A Comprehensive Survey">(Smith, 2023)</a>. Recent advances in transformer architectures have shown promising results in handling sequential data&nbsp;<a href="https://arxiv.org/abs/1706.03762" target="_blank" title="Attention Is All You Need">(Vaswani, 2017)</a>, while convolutional networks remain the gold standard for image processing tasks. Our work bridges these approaches by proposing a unified architecture that can process both visual and textual information simultaneously.</p>
+  <p>Multi-modal learning has become increasingly important in modern machine learning applications. Traditional approaches often struggle with integrating information from different modalities effectively <a href="https://arxiv.org/abs/2301.12345" target="_blank" title="Deep Learning for Natural Language Processing: A Comprehensive Survey">(Smith, 2023)</a>. Recent advances in transformer architectures have shown promising results in handling sequential data <a href="https://arxiv.org/abs/1706.03762" target="_blank" title="Attention Is All You Need">(Vaswani, 2017)</a>, while convolutional networks remain the gold standard for image processing tasks. Our work bridges these approaches by proposing a unified architecture that can process both visual and textual information simultaneously.</p>
 </section>
 
 <section>
@@ -91,61 +91,41 @@
 
 <section>
   <h2>Method</h2>
-  <p>Our proposed architecture consists of three main components: (1) a visual encoder based on ResNet-50, (2) a textual encoder using BERT-base, and (3) a cross-modal fusion module implemented using multi-head attention. The fusion module allows for dynamic weighting of features from different modalities based on the input context. We employ a joint training strategy that optimizes both modality-specific and cross-modal objectives simultaneously.</p>
-
-  <pre><code># Pseudocode for one training step
-# Inputs: image_batch, text_batch
-visual_feats = VisualEncoder(image_batch)      # ResNet-50
-text_feats   = TextEncoder(text_batch)         # BERT-base
-
-# Cross-modal fusion
-fused_feats  = FusionModule(visual_feats, text_feats)  # Multi-head attention
-
-# Compute losses
-loss_visual  = Criterion(visual_head(visual_feats), labels)
-loss_textual = Criterion(text_head(text_feats), labels)
-loss_fusion  = Criterion(fusion_head(fused_feats), labels)
-
-total_loss   = loss_visual + loss_textual + loss_fusion
-
-total_loss.backward()
-optimizer.step()</code></pre>
+  <p>Our proposed architecture consists of three main components that are trained jointly to encourage both modality-specific and cross-modal learning:</p>
+  <ul>
+    <li><strong>Visual Encoder:</strong> Based on ResNet-50, responsible for extracting high-level visual features.</li>
+    <li><strong>Textual Encoder:</strong> Implemented using BERT-base, producing contextualized token embeddings.</li>
+    <li><strong>Cross-Modal Fusion Module:</strong> Utilizes multi-head attention to dynamically weight and integrate features from different modalities based on input context.</li>
+  </ul>
+  <p>The fusion module enables the model to focus on modality-specific cues that are most relevant for the task at hand, while a joint training strategy optimizes both modality-specific and cross-modal objectives simultaneously.</p>
 </section>
 
 <section>
   <h2>Experimental Setup</h2>
-  <p>We evaluate our approach on three benchmark datasets: VQA&nbsp;2.0, MSCOCO Caption, and Flickr30K. Our method achieves 72.4% accuracy on VQA&nbsp;2.0, surpassing the previous best result by 3.2%. On MSCOCO Caption, we obtain a BLEU-4 score of 38.6, which represents a 2.1% improvement over the baseline. Training was performed using Adam optimizer with a learning rate of 1e-4 and batch size of 32.</p>
-  <ul>
-    <li><strong>VQA&nbsp;2.0:</strong> 72.4% accuracy (+3.2%)</li>
-    <li><strong>MSCOCO Caption:</strong> BLEU-4&nbsp;38.6 (+2.1%)</li>
-    <li><strong>Flickr30K:</strong> Consistent gains across all metrics</li>
-  </ul>
+  <p>We evaluate our approach on three benchmark datasets: VQA 2.0, MSCOCO Caption, and Flickr30K. Our method achieves 72.4&nbsp;% accuracy on VQA 2.0, surpassing the previous best result by 3.2&nbsp;%. On MSCOCO Caption, we obtain a BLEU-4 score of 38.6, representing a 2.1&nbsp;% improvement over the baseline. Training is performed using the Adam optimizer with a learning rate of 1e-4 and a batch size of 32.</p>
 </section>
 
 <section>
   <h2>Results</h2>
-
   <figure>
-    <img src="images/training_convergence.png" style="width:70%">
-    <figcaption>Figure&nbsp;1: Convergence behavior of our model during training.</figcaption>
+    <img src="images/training_convergence.png" style="width:70%" alt="Training Convergence Curve">
+    <figcaption>Figure&nbsp;1: Convergence behavior of our model during training compared to baseline approaches.</figcaption>
   </figure>
 
   <figure>
-    <img src="images/attention_visualization.png" style="width:70%">
-    <figcaption>Figure&nbsp;2: Attention weights learned by the cross-modal fusion module.</figcaption>
+    <img src="images/attention_visualization.png" style="width:70%" alt="Attention Visualization">
+    <figcaption>Figure&nbsp;2: Attention weights learned by the cross-modal fusion module, highlighting relevant visual regions when processing textual queries.</figcaption>
   </figure>
 
   <figure>
-    <img src="images/performance_comparison.png" style="width:70%">
-    <figcaption>Figure&nbsp;3: Performance comparison across benchmark datasets.</figcaption>
+    <img src="images/performance_comparison.png" style="width:70%" alt="Performance Comparison Across Datasets">
+    <figcaption>Figure&nbsp;3: Performance comparisons across different datasets, showing consistent improvements over existing methods.</figcaption>
   </figure>
-
-  <p>The proposed method converges faster and achieves lower final loss compared to baseline approaches. The attention visualization shows that the model learns to focus on relevant visual regions when processing textual queries. Across all evaluated datasets, our architecture consistently outperforms existing methods.</p>
 </section>
 
 <section>
   <h2>Conclusion</h2>
-  <p>We have presented a novel multi-modal learning architecture that effectively combines visual and textual information processing. Our experimental results demonstrate significant improvements over existing approaches across multiple benchmark datasets. The proposed cross-modal fusion mechanism shows promise for various applications including visual question answering, image captioning, and multimodal retrieval. Future work will explore extension to additional modalities such as audio and video data.</p>
+  <p>We have presented a novel multi-modal learning architecture that effectively combines visual and textual information processing. Our experimental results demonstrate significant improvements over existing approaches across multiple benchmark datasets. The proposed cross-modal fusion mechanism shows promise for various applications including visual question answering, image captioning, and multimodal retrieval. Future work will explore extensions to additional modalities such as audio and video data.</p>
 </section>
 </body>
 </html>
